# span_alignment_annotation_tool

./: Readme  Readme.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  webpack.config.js
compAnn/: __init__.py  config.py  model.py
compAnn/api/: __init__.py  alignments.py  annotations.py  calSimilarity.py  downloadData.py  jobs.py  labels.py  notes.py  projects.py  review.py  segments.py  submitAnn.py  textInfo.py  texts.py  uploadData.py  uploadProject.py  userAuth.py  userInfo.py
compAnn/js/: AnnCard.jsx  Entry.jsx  FileDownloader.jsx  FileUploaderUni.jsx  Header.jsx  InfoPanel.jsx  Layout.jsx  NotFound.jsx  ShowNHide.jsx  TextAnnotate.jsx  TextTable.jsx  main.jsx  useToken.jsx
compAnn/js/Annotate/: AlignAnnotateCard.jsx  AlignmentCard.jsx  Annotate.jsx  AnnotateAlignMain.jsx  AnnotateAlignPanel.jsx  AnnotateHeader.jsx  AnnotateProj.jsx  AnnotateSpanPanel.jsx  AnnotateTexts.jsx
compAnn/js/Jobs/: CreateJobPanel.jsx  Jobs.jsx  ManageJobCard.jsx  ManageJobs.jsx  MyJobs.jsx
compAnn/js/NotePanel/: NoteCard.jsx  NotePanel.jsx  QuickNote.jsx  Quote.jsx  RichNote.jsx
compAnn/js/Projects/: CompareHeader.jsx  Home.jsx  ProjectInfo.jsx  ProjectsCompare.jsx  ProjectsSpansPanel.jsx  Texts.jsx
compAnn/js/Review/: AlignmentCompCard.jsx  Review.jsx  ReviewAlignCompare.jsx  ReviewAlignPanel.jsx  ReviewHeader.jsx  ReviewProj.jsx  ReviewSpansPanel.jsx  ReviewTexts.jsx
compAnn/services/: auth.py  utils.py
compAnn/static/css/: style.css
compAnn/templates/: index.html
compAnn/views/: __init__.py  index.py
sql/: init.sql  schema.sql
